--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ button.secondary{background:#fff;color:#333;border:1px solid #ddd;box-shadow:non
 </div>
 
 <!-- الصق هنا كود مكتبة QR يا أحمد -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <!-- بقية كود الحساب والنتائج -->
